fix IE scrollbar hiding footer

--- a/app/assets/stylesheets/main.scss
+++ b/app/assets/stylesheets/main.scss
@@ -1,3 +1,7 @@
+body {
+     -ms-overflow-style: scrollbar;
+}
+
 .slight {
     color: grey;
 }
